# workflow-migrate

./: AGENT.md  CONTRIBUTING.md  LICENSE  README.md  VERSIONS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: HOMEBREW.md
src/workflow_migrate/: __init__.py  cli.py  core.py
tests/: test_core.py
