[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-migrate"
version = "0.1.0"
description = "CLI to convert RPA workflows into agent architectures."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/workflow-migrate"
Issues = "https://github.com/erron-ai/workflow-migrate/issues"

[project.scripts]
workflow-migrate = "workflow_migrate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
